--- a/stopwatch.html
+++ b/stopwatch.html
@@ -1,6 +1,11 @@
 <html>
 	<head>
-		<title>Stopwatch</title>
+		<meta charset="utf-8">
+		<title>Online Stopwatch</title>
+		<meta name="keywords" content="stopwatch, online stopwatch, free online stopwatch, large stopwatch, fullscreen stopwatch, stopwatch timer, ad free, no ads, lightweight, online stopwatch ad free, online stopwatch no ads, online stopwatch timer" />
+		<meta name="description" content="Fullscreen online stopwatch without ads. Mobile-friendly and very lightweight." />
+		<meta name="author" content="Pavel Alexeev" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<style type="text/css">
 			@font-face {
 			    font-family: 'timer_font';
